Thu Mar 27 09:34:54 UTC 2014  Martin Corino  <mcorino@remedy.nl>

        * bin/PerlACE/ProcessAndroid.pm:
        * bin/PerlACE/TestTarget_Android.pm:
          Added support for copying system libraries to emulator target.

Mon Mar 24 10:27:40 UTC 2014  Martin Corino  <mcorino@remedy.nl>

        * bin/PerlACE/Process_Unix.pm:
        * bin/PerlACE/TestTarget.pm:
          Improve remote (-shell) testing support.

        * include/makeinclude/platform_android.GNU:
          Add required standard libraries for rtti, exceptions and (shared)
          stl support on Android.

Sun Mar 23 22:55:42 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/ACE+TAO+CIAO+DAnCE.json:
          Exclude some OpenDDS logging macros from the test
          coverage

Fri Mar 21 19:58:03 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Map_Manager_Test.cpp:
          Fix windows warnings

Mon Mar 17 10:41:37 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Map_Manager_Test.cpp:
          Fixed possible divide by zero reported by Coverity

Mon Mar 17 10:20:30 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Manual_Event_Test.cpp:
          Fixed data race

Mon Mar 17 10:12:44 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Log_Msg.h:
        * ace/Log_Msg.inl:
        * ace/Log_Msg.cpp:
          Don't try to cache the process id, but just call the ACE OS
          method when needed (which is just in some cases and the operation
          is inline). Fixes possible data races reported by Intel Inspector
          XE.

Mon Mar 17 09:52:03 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/IO_SAP.h:
        * ace/IO_SAP.cpp:
        * ace/IPC_SAP.cpp:
        * ace/IPC_SAP.h:
          Don't try to cache the process id, but just call the ACE OS
          method when needed (which is just in some cases and the operation